<resources>
    <string name="app_name">Lab04</string>string>

    <string name="app_title">Team Manager</string>

    <string name="name_hint">(Please enter a team name)</string>

    <string name="name_label">Team Name</string>

    <string name="address_hint">(Please enter a ZIP code)</string>

    <string name="address_label">Team Address</string>

    <string name="button_text">OPEN IN GOOGLE MAPS</string>

    <string name="new_avatar_title">Select a new Avatar</string>

    <string name="new_avatar_button">Load from phone</string>

</resources>