<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnSetAvatarButton"
            app:srcCompat="@drawable/ic_logo_00"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Team Manager"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="@string/app_title" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="37dp" />

        <EditText
            android:id="@+id/teamNameField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/teamNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/name_label" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="37dp" />

        <EditText
            android:id="@+id/teamAddressField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/address_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/teamNameTextField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/address_label" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="37dp" />

        <Button
            android:id="@+id/googleMaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="OnOpenInGoogleMaps"
            android:text="@string/button_text" />


    </LinearLayout>

</RelativeLayout>